--- a/WpfSquardleSolver/View/MainWindow.xaml
+++ b/WpfSquardleSolver/View/MainWindow.xaml
@@ -10,8 +10,8 @@
         mc:Ignorable="d"
         Title="SquaredleSolver" Height="450" Width="800" Background="#ecf0f1">
     <Window.Resources>
-        <converters:IsSolverRunningColorConverter x:Key="IsSolverRunningColorConverter"/>
-        <converters:IsSolverRunningTextConverter x:Key="IsSolverRunningTextConverter"/>
+        <converters:SolverStateToColorConverter x:Key="SolverStateToColorConverter"/>
+        <converters:SolverStateToTextConverter x:Key="SolverStateToTextConverter"/>
     </Window.Resources>
     <Grid>
         <TextBox 
@@ -76,11 +76,11 @@
         </ListView>
         
         <Button x:Name="ToggleSolverButton"
-                Content="{Binding IsSolverRunning, Converter={StaticResource IsSolverRunningTextConverter}}"
+                Content="{Binding SolverState, Converter={StaticResource SolverStateToTextConverter}}"
                 d:Content="PlaceHolder"
                 Command="{Binding ToggleSolverOnOff}"
                 d:Background="Green"
-                Background="{Binding IsSolverRunning, Converter={StaticResource IsSolverRunningColorConverter}}"
+                Background="{Binding SolverState, Converter={StaticResource SolverStateToColorConverter}}"
                 HorizontalAlignment="Left"
                 Margin="128,184,0,0"
                 VerticalAlignment="Top"
