--- a/WpfSquardleSolver/View/CharacterGrid.xaml
+++ b/WpfSquardleSolver/View/CharacterGrid.xaml
@@ -21,6 +21,7 @@
                     <Setter Property="HorizontalAlignment" Value="Center"/>
                     <Setter Property="VerticalAlignment" Value="Center"/>
                     <Setter Property="FontWeight" Value="Bold"/>
+                    <Setter Property="FontFamily" Value="Courier New"/>
                 </Style>
                 <Style TargetType="Border">
                     <Setter Property="Margin" Value="2,2,2,2"/>
