--- a/GUI/View/MainWindow.xaml
+++ b/GUI/View/MainWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="WpfSquaredleSolver.View.MainWindow"
+﻿<Window x:Class="GUI.View.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:viewmodel="clr-namespace:WpfSquaredleSolver.ViewModel"
-        xmlns:converters="clr-namespace:WpfSquaredleSolver.ValueConverters"
-        xmlns:view="clr-namespace:WpfSquaredleSolver.View" 
+        xmlns:viewmodel="clr-namespace:GUI.ViewModel"
+        xmlns:converters="clr-namespace:GUI.ValueConverters"
+        xmlns:view="clr-namespace:GUI.View" 
         d:DataContext="{d:DesignInstance Type=viewmodel:MainWindowViewModel}"
         mc:Ignorable="d"
         Title="SquaredleSolver" Height="383" Width="793" Background="#ecf0f1">
