--- a/GUI/View/MainWindow.xaml
+++ b/GUI/View/MainWindow.xaml
@@ -8,17 +8,17 @@
         xmlns:view="clr-namespace:GUI.View" 
         d:DataContext="{d:DesignInstance Type=viewmodel:MainWindowViewModel}"
         mc:Ignorable="d"
-        Title="SquaredleSolver" Height="383" Width="793" Background="#ecf0f1">
+        Title="SquaredleSolver" Height="383" Width="793" Background="#ecf0f1"
+        MouseLeftButtonUp="Window_MouseLeftButtonUp">
     <Window.Resources>
         <converters:SolverStateToTextConverter x:Key="SolverStateToTextConverter"/>
         <converters:TimeSpanToTextConverter x:Key="TimeSpanToTextConverter"/>
         <converters:NumberOfAnswersFoundToTextConverter x:Key="NumberOfAnswersFoundToTextConverter"/>
     </Window.Resources>
     <Grid>
+        
         <Border
-            Width="180" 
-            Height="180"
-            Margin="10,0,0,0"
+            Width="160" Height="160" Margin="10,0,0,0"
             Padding="10"
             Background="#bdc3c7"
             CornerRadius="20"
@@ -29,17 +29,53 @@
                     x:Name="InputField"
                     FontStretch="ExtraExpanded"
                     PreviewKeyDown="TextBox_PreviewKeyDown"
+                    LostFocus="InputField_LostFocus"
                     CharacterCasing="Upper"
                     AcceptsReturn="True" 
+                    Visibility="Collapsed"
                     d:Text="HELL&#10;OW R&#10;LDFO&#10;OBAR"
                     Text="{Binding PuzzleAsText, UpdateSourceTrigger=PropertyChanged}"
                     FontFamily="Courier New"
                     Background="Transparent"
-                    BorderThickness="0"/>
+                    BorderThickness="0" />
             </Viewbox>
         </Border>
+        <view:NodeFilterGrid
+            x:Name="VisualPuzzleFilter"
+            Width="{Binding RelativeSource={RelativeSource Self}, Path=ActualHeight}"
+            Height="140"
+            Margin="20,0,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Center"
+            d:Background="Gray"
+            Panel.ZIndex="1"
+            DataContext="{Binding NodeFilterGridViewModel}">
+            <view:NodeFilterGrid.Resources>
+                <Style TargetType="view:NodeFilterGrid">
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding ElementName=InputField, Path=IsFocused}" Value="True">
+                            <Setter Property="Visibility" Value="Collapsed"/>
+                        </DataTrigger>
+                        <DataTrigger Binding="{Binding ElementName=InputField, Path=IsFocused}" Value="False">
+                            <Setter Property="Visibility" Value="Visible"/>
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </view:NodeFilterGrid.Resources>
+        </view:NodeFilterGrid>
+        <Button
+            Width="30"
+            Height="20"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Center"
+            Margin="75,210,0,0"
+            Content="Edit"
+            VerticalContentAlignment="Center"
+            Visibility="{Binding ElementName=VisualPuzzleFilter, Path=Visibility}"
+            Command="{Binding FocusPuzzleInput}"
+                />
         <TextBlock
-            Margin="226,-150,0,0"
+            Margin="226,-50,0,0"
             Text="{Binding SolverRunTime, Converter={StaticResource TimeSpanToTextConverter}}"
             HorizontalAlignment="Left"
             Width="132"
@@ -54,7 +90,7 @@
             Command="{Binding ToggleSolverOnOff}"
             HorizontalAlignment="Left"
             VerticalAlignment="Center"
-            Margin="226,-100,0,0"
+            Margin="226,0,0,0"
             Width="132"
             Height="20">
             <Button.Resources>
@@ -83,7 +119,7 @@
             </Button.Resources>
         </Button>
         <TextBlock
-            Margin="226,-50,0,0"
+            Margin="226,50,0,0"
             Text="{Binding NumberOfAnswersFound, Converter={StaticResource NumberOfAnswersFoundToTextConverter}}"
             HorizontalAlignment="Left"
             Width="132"
@@ -92,15 +128,7 @@
             TextAlignment="Center">
             <d:TextBlock.Text>Answers Found: 5</d:TextBlock.Text>
         </TextBlock>
-        <view:NodeFilterGrid
-            Width="{Binding RelativeSource={RelativeSource Self}, Path=ActualHeight}"
-            Height="150"
-            HorizontalAlignment="Left"
-            VerticalAlignment="Center"
-            Margin="217,125,0,0"
-            d:Background="Gray"
-            DataContext="{Binding NodeFilterGridViewModel}"
-            />
+        
         <ListView
                 Margin="396,10,10,10"
                 Background="White"
