--- a/GUI/View/NodeFilterGrid.xaml
+++ b/GUI/View/NodeFilterGrid.xaml
@@ -10,8 +10,9 @@
              d:DesignWidth="800"
              d:DataContext="{d:DesignInstance Type=vm:NodeViewModel}">
     <Viewbox>
-        <Grid x:Name="ButtonGrid"
-              Width="{Binding RelativeSource={RelativeSource Mode=Self}, Path=ActualHeight}">
+        <Grid
+            x:Name="ButtonGrid"
+            Width="{Binding RelativeSource={RelativeSource Mode=Self}, Path=ActualHeight}">
             <Grid.Resources>
             <!-- The data context for buttons in this grid is inteded to be NodeViewModel -->
                 <Style TargetType="Button">
@@ -26,7 +27,14 @@
                         </DataTrigger>
                     </Style.Triggers>
                 </Style>
+                <Style TargetType="Border">
+                    <Setter Property="Padding" Value="3"/>
+                    <Setter Property="CornerRadius" Value="3"/>
+                    <Setter Property="BorderThickness" Value="3"/>
+                    <Setter Property="BorderBrush" Value="AliceBlue"/>
+                </Style>
             </Grid.Resources>
+
             <d:Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="*"/>
@@ -35,10 +43,19 @@
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
             </d:Grid.ColumnDefinitions>
-            <d:Button Grid.Row="0" Grid.Column="0" Content="A"/>
-            <d:Button Grid.Row="0" Grid.Column="1" Content="B"/>
-            <d:Button Grid.Row="1" Grid.Column="0" Content="C"/>
-            <d:Button Grid.Row="1" Grid.Column="1" Content="D"/>
+
+            <d:Border Grid.Row="0" Grid.Column ="0">
+                <d:Button Content="A"/>
+            </d:Border>
+            <d:Border Grid.Row="0" Grid.Column ="1">
+                <d:Button Content="B"/>
+            </d:Border>
+            <d:Border Grid.Row="1" Grid.Column ="0">
+                <d:Button Content="C"/>
+            </d:Border>
+            <d:Border Grid.Row="1" Grid.Column ="1">
+                <d:Button Content="B"/>
+            </d:Border>
         </Grid>
     </Viewbox>
 </UserControl>
